# rs274ngc-interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  sim.tbl  test.ngc  test.sh
cmake_modules/: rs274Config.cmake.in
inifile/: CMakeLists.txt
nml_intf/: CMakeLists.txt  canon.hh
posemath/: CMakeLists.txt
pythonplugin/: CMakeLists.txt
rs274ngc/: CMakeLists.txt  interp_arc.cc  interp_namedparams.cc  interp_python.cc  tool_parse.cc
rtapi/: CMakeLists.txt  rtapi.h
sai/: CMakeLists.txt  builtin_modules.cc
tests/: CMakeLists.txt  builtin_modules.cc  test.cc
